# stellar

./: .gitignore  Cargo.toml  LICENSE  README.md  open-next.config.ts  package-lock.json  package.json  release_notes.txt  tailwind.config.js  wrangler.json
.github/workflows/: ci.yml
contracts/liquidity_vault/: Cargo.toml
contracts/liquidity_vault/src/: lib.rs  test.rs
contracts/liquidity_vault/test_snapshots/test/: test_liquidity_vault_checkpoint_and_withdraw_flow.1.json  test_operator_withdraw_exceeds_balance.1.json
contracts/merchant_vault/: Cargo.toml
contracts/merchant_vault/src/: lib.rs  test.rs
contracts/reward_token/src/: lib.rs
contracts/specs/: ARCHITECTURE.md  CONTRACT_SPEC.md
contracts/subscription_manager/: Cargo.toml
contracts/token/: Cargo.toml
contracts/yield_pool_manager/: Cargo.toml
contracts/yield_pool_manager/src/: lib.rs  test.rs
contracts/yield_pool_manager/test_snapshots/test/: test_checkpoint_interval_enforcement_premature.1.json  test_checkpoint_on_paused_position_fails.1.json  test_checkpoint_on_terminated_position_fails.1.json  test_pause_and_resume_position.1.json  test_register_strategy_and_stake.1.json  test_terminate_position.1.json
scripts/: deploy_testnet.sh  rewrite_history.sh  run-frontend-tests.js
src/app/: globals.css  layout.tsx  page.tsx
src/components/: ErrorModal.tsx  MerchantDashboard.tsx  PlanExplorer.tsx  SubscriberDashboard.tsx  WalletConnect.tsx
src/config/: contracts.ts
src/media/: cargo_test_output.txt  frontend_test_output.txt
src/types/: index.ts
src/utils/: sorobanClient.ts
(+16 files in other folders)
